--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,6 +1,6 @@
 PORT = 4000
 
-MONGO_URI = "mongodb+srv://snigdha:Snigdha%40mongodb1@cluster0.ryhkg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI = mongodb+srv://snigdha:Snigdha%40mongodb1@cluster0.ryhkg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET_KEY = Snigdha
 
@@ -14,5 +14,5 @@ CLOUDINARY_CLIENT_NAME = dtqzmlax6
 
 CLOUDINARY_CLIENT_API = 515545413642156
 
-CLOUDINARY_CLIENT_SECRET = "Mpd4MP7GdRm_WXfKJcjmvPaWxGg"
+CLOUDINARY_CLIENT_SECRET = Mpd4MP7GdRm_WXfKJcjmvPaWxGg
 
