--- a/server/config/config.env
+++ b/server/config/config.env
@@ -8,7 +8,7 @@ JWT_EXPIRES = 5d
 
 COOKIE_EXPIRE = 5
 
-FRONTEND_URL = http://localhost:5173
+FRONTEND_URL = https://localhost:5173
 
 CLOUDINARY_CLIENT_NAME = dtqzmlax6
 
